Update RewardCommand.java
Zmiany fajne